--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./fonts.css">
     <link
       rel="shortcut icon"
       href="./assets/img/favicon.ico"
