--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./fonts.css">
+    <link rel="stylesheet" href="./fonts.css" />
     <link
       rel="shortcut icon"
       href="./assets/img/favicon.ico"
@@ -18,8 +18,16 @@
     <img id="animatedLogo" src="./assets/img/logoLarge.png" alt="Logo" />
 
     <div class="hiddenMainpage" id="contentMainpage">
+      <div class="mainpageSignUpContainer">
+        <p class="textNotUser">Not a Join user?</p>
+        <button class="mainpageSignUpButton" onclick="redirectToSignUpPage()">Sign up</button>
+      </div>
+
+      <div>
+
+      </div>
+      <h1 class="loginHeadline">Log in</h1>
 
     </div>
-
   </body>
 </html>
