login container added

--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     <img id="animatedLogo" src="./assets/img/logoLarge.png" alt="Logo" />
 
     <div class="hiddenMainpage" id="contentMainpage">
+
       <div class="mainpageSignUpContainer">
         <p class="textNotUser">Not a Join user?</p>
         <button class="mainpageSignUpButton" onclick="redirectToSignUpPage()">Sign up</button>
       </div>
 
-      <div>
-
+      <div class="loginContainer">
+        <h1 class="loginHeadline">Log in</h1>
       </div>
-      <h1 class="loginHeadline">Log in</h1>
+      
 
     </div>
   </body>
