add help.html/css; add folder for html/css/js

--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -5,29 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legal Notice</title>
-    <link rel="stylesheet" href="legal_notice.css">
+    <link rel="stylesheet" href="../css/legal_notice.css">
 </head>
 
 <body>
     <div class="container m-left-328">
         <a class="arrow-backwards-link" href="index.html">
-            <img class="arrow-backwards" src="./assets/img/arrow-left-line.svg" alt="arrow_left">
+            <img class="arrow-backwards" src="../assets/img/arrow-left-line.svg" alt="arrow_left">
         </a>
         <h1>Legal Notice</h1>
-
+        <br><br>
         <div class="content">
             <div class="imprint">
                 <br>
-                <h2>Imprint</h2>
+                <h2 class="imprint-headline">Imprint</h2>
                 <br>
                 <ul>
                     <li>Miriam Fuchs, Ina Penner, Manuel Mannhold</li>
                     <li>c/o Developer Akademie GmbH</li>
-                    <li>Tassiloplatz 25</li>
-                    <li>81541 München</li>
+                    Tassiloplatz 25<br>
+                    81541 München
                 </ul>
                 <br>
-
                 <h2>Exploring the Board</h2>
                 Email: <a href="mailto: support@developer-akademie.com">support@developer-akademie.com</a>
             </div>
@@ -83,8 +82,8 @@
             damages, arising out of or in connection with the use or performance of Join.
             <br><br>
 
-            <h2>Indemnit</h2>
-            You agree to indemnify, defend and hold harmless us, the listed students, the <a
+            <h2>Indemnity</h2>
+            You agree to indemnity, defend and hold harmless us, the listed students, the <a
                 href="https://developerakademie.com/">Developer Akademie GmbH</a>, and our
             affiliates, partners, officers, directors, agents, and employees, from and against any claim, demand, loss,
             damage, cost, or liability (including reasonable legal fees) arising out of or relating to your use of <a
