--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legal Notice</title>
     <link rel="stylesheet" href="../css/legal_notice.css">
+    <link rel="stylesheet" href="../fonts.css">
 </head>
 
 <body>
