nearly finished login

--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
             </form>
           </div>
           <div class="rememberMeSection">
-            <img
-              src="./assets/img/loginCheckButton.png"
-              alt="Kontrollkästchen"
-            />
-            <p>Remember me</p>
+            <input class="checkboxRemember" type="checkbox" id="rememberMe" />
+            <label for="rememberMe" class="checkboxLabel">Remember me</label>
           </div>
         </div>
         <div class="loginButtons">
           <button class="mainpageLoginButton">Log in</button>
           <button class="mainpageGuestButton">Guest Log in</button>
         </div>
+      </div>
+
+      <div class="legalButtonsContainer">
+        <button class="legalButtonLeft">Privacy Policy</button>
+        <button class="legalButtonRight">Legal Notice</button>
       </div>
     </div>
   </body>
