--- a/index.html
+++ b/index.html
@@ -29,9 +29,35 @@
         <h1 class="loginHeadline">Log in</h1>
         <div class="mainCredentials">
           <div class="loginInputFields">
-            <form action="">
-              <input class="loginEmail" type="text" placeholder="Email" />
-              <input class="loginPassword" type="text" placeholder="Password" />
+            <form
+              action=""
+              style="
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 32px;
+              "
+            >
+              <div class="emailContainer">
+                <input class="loginEmail" type="email" placeholder="Email" />
+                <img
+                  class="emailIcon"
+                  src="./assets/img/mailIcon.png"
+                  alt="Email"
+                />
+              </div>
+              <div class="emailContainer">
+                <input
+                  class="loginPassword"
+                  type="password"
+                  placeholder="Password"
+                />
+                <img
+                  class="emailIcon"
+                  src="./assets/img/lockIcon.png"
+                  alt="Schloss"
+                />
+              </div>
             </form>
           </div>
           <div class="rememberMeSection">
@@ -46,8 +72,12 @@
       </div>
 
       <div class="legalButtonsContainer">
-        <button class="legalButtonLeft">Privacy Policy</button>
-        <button class="legalButtonRight">Legal Notice</button>
+        <button class="legalButtonLeft" onclick="redirectToPrivacyPage()">
+          Privacy Policy
+        </button>
+        <button class="legalButtonRight" onclick="redirectToLegalPage()">
+          Legal Notice
+        </button>
       </div>
     </div>
   </body>
