--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
               "
             >
               <div class="emailContainer">
-                <input class="loginEmail" type="email" placeholder="Email" />
+                <input
+                  class="loginEmail"
+                  type="email"
+                  placeholder="Email"
+                  id="loginEmailInput"
+                />
                 <img
                   class="emailIcon"
                   src="./assets/img/mailIcon.png"
@@ -51,6 +56,7 @@
                   class="loginPassword"
                   type="password"
                   placeholder="Password"
+                  id="loginPasswordInput"
                 />
                 <img
                   class="emailIcon"
