add top part Board

--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -7,14 +7,13 @@
     <title>Privacy Policy</title>
     <link rel="stylesheet" href="../css/privacy_policy.css">
     <link rel="stylesheet" href="../fonts.css">
-    <link rel="stylesheet" href="../assets/templates/desktop_template.html">
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <script src="../script.js"></script>
 </head>
 
 <body onload="includeHTML()">
     <div w3-include-html="../assets/templates/desktop_template.html"></div>
-    <a class="arrow-backwards-link" href="index.html">
+    <a class="arrow-backwards-link" href="../index.html">
         <img class="arrow-backwards" src="../assets/img/arrow-left-line.svg" alt="arrow_left">
     </a>
     <div class="container m-left-328">
