several functions added

--- a/html/signup.html
+++ b/html/signup.html
@@ -39,6 +39,7 @@
                 type="text"
                 placeholder="Name"
                 id="signupNameInput"
+                required
               />
               <img
                 class="emailIcon"
@@ -52,6 +53,7 @@
                 type="email"
                 placeholder="Email"
                 id="signupEmailInput"
+                required
               />
               <img
                 class="emailIcon"
@@ -65,6 +67,7 @@
                 type="password"
                 placeholder="Password"
                 id="signupPasswordInput"
+                required
               />
               <img
                 class="emailIcon"
@@ -78,6 +81,7 @@
                 type="password"
                 placeholder="Confirm Password"
                 id="signupConfirmPassword"
+                required
               />
               <img
                 class="emailIcon"
@@ -91,12 +95,16 @@
           <input class="checkboxRemember" type="checkbox" id="rememberMe" />
           <label for="rememberMe" class="checkboxLabel"
             >I accept the
-            <a href="./privacy_policy.html" class="linkPolicy">Privacy Policy</a></label
+            <a href="./privacy_policy.html" class="linkPolicy"
+              >Privacy Policy</a
+            ></label
           >
         </div>
       </div>
 
-      <button id="signupButton" onclick="signup()">Sign up</button>
+      <button type="button" id="signupButton" onclick="signup()">
+        Sign up
+      </button>
     </div>
 
     <div class="legalButtonsContainer">
