--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                   type="email"
                   placeholder="Email"
                   id="loginEmailInput"
+                  required
                 />
                 <img
                   class="emailIcon"
@@ -57,6 +58,7 @@
                   type="password"
                   placeholder="Password"
                   id="loginPasswordInput"
+                  required
                 />
                 <img
                   class="emailIcon"
@@ -72,8 +74,16 @@
           </div>
         </div>
         <div class="loginButtons">
-          <button class="mainpageLoginButton">Log in</button>
-          <button class="mainpageGuestButton">Guest Log in</button>
+          <button
+            type="button"
+            class="mainpageLoginButton"
+            onclick="loginUser()"
+          >
+            Log in
+          </button>
+          <button class="mainpageGuestButton" onclick="redirectToBoard()">
+            Guest Log in
+          </button>
         </div>
       </div>
 
