--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                   class="emailIcon"
                   src="./assets/img/lockIcon.png"
                   alt="Schloss"
+                  id="lockIcon"
                 />
               </div>
             </form>
