password section revised

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 />
               </div>
             </form>
+            <div id="errorMessage" class="errorMessage">
+              Wrong password. Ups! Try again.
+            </div>
           </div>
           <div class="rememberMeSection">
             <input class="checkboxRemember" type="checkbox" id="rememberMe" />
