signup visibility toggle

--- a/html/signup.html
+++ b/html/signup.html
@@ -73,6 +73,7 @@
                 class="emailIcon"
                 src="../assets/img/lockIcon.png"
                 alt="Schloss"
+                id="signupLockIcon"
               />
             </div>
             <div class="emailContainer">
@@ -87,9 +88,13 @@
                 class="emailIcon"
                 src="../assets/img/lockIcon.png"
                 alt="Schloss"
+                id="signupValidationLockIcon"
               />
             </div>
           </form>
+          <div id="errorMessage" class="errorMessageSignup">
+            Ups! Your password does not match.
+          </div>
         </div>
         <div class="privacyPolicySection">
           <input class="checkboxRemember" type="checkbox" id="rememberMe" />
