--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -14,11 +14,14 @@
 
 <body onload="includeHTML()">
     <div w3-include-html="../assets/templates/desktop_template.html"></div>
-    <a class="arrow-backwards-link" href="index.html">
-        <img class="arrow-backwards" src="../assets/img/arrow-left-line.svg" alt="arrow_left">
-    </a>
+
     <div class="container m-left-328">
-        <h1>Privacy Policy</h1>
+        <div class="head">
+            <h1>Privacy Policy</h1>
+            <a class="arrow-backwards-link" href="index.html">
+                <img class="arrow-backwards" src="../assets/img/arrow-left-line.svg" alt="arrow_left">
+            </a>
+        </div>
         <br><br>
         <p>Last updated: May 24, 2024</p>
         <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your
@@ -256,7 +259,7 @@
         <p>The Company will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for
             a shorter period of time, except when this data is used to strengthen the security or to improve the
             functionality of Our Service, or We are legally obligated to retain this data for longer time periods.</p>
-            <br><br>
+        <br><br>
         <h3>Transfer of Your Personal Data</h3>
         <br>
         <p>Your information, including Personal Data, is processed at the Company's operating offices and in any other
@@ -281,7 +284,7 @@
         </p>
         <p>Please note, however, that We may need to retain certain information when we have a legal obligation or
             lawful basis to do so.</p>
-            <br><br>
+        <br><br>
         <h3>Disclosure of Your Personal Data</h3>
         <br>
         <h4>Business Transactions</h4>
@@ -306,7 +309,7 @@
         <p>The security of Your Personal Data is important to Us, but remember that no method of transmission over the
             Internet, or method of electronic storage is 100% secure. While We strive to use commercially acceptable
             means to protect Your Personal Data, We cannot guarantee its absolute security.</p>
-            <br><br>
+        <br><br>
         <h2>Children's Privacy</h2>
         <br>
         <p>Our Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable
@@ -316,7 +319,7 @@
             remove that information from Our servers.</p>
         <p>If We need to rely on consent as a legal basis for processing Your information and Your country requires
             consent from a parent, We may require Your parent's consent before We collect and use that information.</p>
-            <br><br>
+        <br><br>
         <h2>Links to Other Websites</h2>
         <br>
         <p>Our Service may contain links to other websites that are not operated by Us. If You click on a third party
@@ -324,7 +327,7 @@
             of every site You visit.</p>
         <p>We have no control over and assume no responsibility for the content, privacy policies or practices of any
             third party sites or services.</p>
-            <br><br>
+        <br><br>
         <h2>Changes to this Privacy Policy</h2>
         <br>
         <p>We may update Our Privacy Policy from time to time. We will notify You of any changes by posting the new
@@ -333,7 +336,7 @@
             effective and update the &quot;Last updated&quot; date at the top of this Privacy Policy.</p>
         <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy
             are effective when they are posted on this page.</p>
-            <br><br>
+        <br><br>
         <h2>Contact Us</h2>
         <br>
         <p>If you have any questions about this Privacy Policy, You can contact us:</p>
