--- a/html/add_task.html
+++ b/html/add_task.html
@@ -9,21 +9,37 @@
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <script src="../script.js"></script>
     <link rel="stylesheet" href="../css/add_task.css">
+    <link rel="stylesheet" href="../fonts.css">
 </head>
 
 <body onload="includeHTML()">
     <div w3-include-html="../assets/templates/desktop_template.html"></div>
-
-    <header>
-        <h1>Add Task</h1>
-    </header>
-    <section id="content">
-        <div class="content-left">
-            
+    <div class="container  m-left-328">
+        <div class="head">
+            <h1>Add Task</h1>
         </div>
-        <div class="seperator"></div>
-        <div class="content-right"></div>
-    </section>
+        <section id="content">
+            <div class="content-left">
+                <label for="input-title">Title<span class="input-star">*</span></label>
+                <input type="text" id="input-title" placeholder="Enter a Title">
+                <label for="input-description">Description</label>
+                <textarea name="input-description" id="input-description" placeholder="Enter a Description"></textarea>
+                <label for="input-assigny">Assigned to</label>
+                <form action="#">
+                    <input list="input-assigned" id="input-assigned" name="input-assigny">
+                    <datalist id="input-assigned">
+                        <option value="1"></option>
+                        <option value="2"></option>
+                        <option value="3"></option>
+                        <option value="4"></option>
+                        <option value="5"></option>
+                    </datalist>
+                </form>
+            </div>
+            <div class="seperator"></div>
+            <div class="content-right"></div>
+        </section>
+    </div>
 </body>
 
 </html>
