minor changes index and signup

--- a/html/signup.html
+++ b/html/signup.html
@@ -15,7 +15,7 @@
     <script src="../js/signup.js"></script>
   </head>
   <body>
-    <img class="logoSignupPage" src="../assets/img/logoLarge.png" alt="Logo" />
+    <img class="logoSignupPage" src="../assets/img/logoLarge.svg" alt="Logo" />
     <div class="signupContainer">
       <a class="signupArrow" href="../index.html"></a>
       <h1 class="signupHeadline">Sign up</h1>
@@ -40,7 +40,7 @@
               />
               <img
                 class="emailIcon"
-                src="../assets/img/personIcon.png"
+                src="../assets/img/personIcon.svg"
                 alt="Person"
               />
             </div>
@@ -54,7 +54,7 @@
               />
               <img
                 class="emailIcon"
-                src="../assets/img/mailIcon.png"
+                src="../assets/img/mailIcon.svg"
                 alt="Email"
               />
             </div>
@@ -68,7 +68,7 @@
               />
               <img
                 class="emailIcon"
-                src="../assets/img/lockIcon.png"
+                src="../assets/img/lockIcon.svg"
                 alt="Schloss"
                 id="signupLockIcon"
               />
@@ -83,7 +83,7 @@
               />
               <img
                 class="emailIcon"
-                src="../assets/img/lockIcon.png"
+                src="../assets/img/lockIcon.svg"
                 alt="Schloss"
                 id="signupValidationLockIcon"
               />
