--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body class="mainpage">
-    <img id="animatedLogo" src="./assets/img/logoLarge.png" alt="Logo" />
+    <img id="animatedLogo" src="./assets/img/logoLarge.svg" alt="Logo" />
 
     <div class="hiddenMainpage" id="contentMainpage">
       <div class="mainpageSignUpContainer">
@@ -48,7 +48,7 @@
                 />
                 <img
                   class="emailIcon"
-                  src="./assets/img/mailIcon.png"
+                  src="./assets/img/mailIcon.svg"
                   alt="Email"
                 />
               </div>
@@ -62,7 +62,7 @@
                 />
                 <img
                   class="emailIcon"
-                  src="./assets/img/lockIcon.png"
+                  src="./assets/img/lockIcon.svg"
                   alt="Schloss"
                   id="lockIcon"
                 />
