--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
 
-    <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./fonts.css" />
     <link
@@ -25,7 +24,7 @@
         </button>
       </div>
 
-      <div class="loginContainer">
+      <div class="loginContainer" onload="onloadFunc()">
         <h1 class="loginHeadline">Log in</h1>
         <div class="mainCredentials">
           <div class="loginInputFields">
@@ -100,5 +99,7 @@
         </button>
       </div>
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
