template js added

--- a/html/signup.html
+++ b/html/signup.html
@@ -14,7 +14,7 @@
     />
     <script src="../js/signup.js"></script>
   </head>
-  <body>
+  <body onload="onloadDatabase()">
     <img class="logoSignupPage" src="../assets/img/logoLarge.svg" alt="Logo" />
     <div class="signupContainer">
       <a class="signupArrow" href="../index.html"></a>
