--- a/html/signup.html
+++ b/html/signup.html
@@ -75,7 +75,7 @@
             </div>
             <div class="emailContainer">
               <input
-                class="signupPassword"
+                class="signupPassword confirmPassword"
                 type="password"
                 placeholder="Confirm Password"
                 id="signupConfirmPassword"
